--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@reduxjs/toolkit": "^1.5.0",
     "babel-loader": "^8.2.2",
     "bootstrap": "^4.5.2",
     "css-loader": "^5.0.1",
