--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.2",
     "css-loader": "^5.0.1",
     "firebase": "^8.2.1",
+    "moment": "^2.29.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
