--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ReactChat", // This will be great for attartcing users with something modern
-  "version": "1.0.0", // For minor fixes increase the 2nd position, for a major update increase the 1st position, for bug fixes and other --> the 3rd position (left to right)
-  "description": "This chat app connect people that want a simple and modern experience along with ease of use.", // Attract the right target audience
+  "name": "ReactChat",
+  "version": "1.0.1",
+  "description": "This chat app connect people that want a simple and modern experience along with ease of use.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
